# OpenXR-Canonical-Pose-Tool

./: .clang-format  .gitignore  .gitmodules  AndroidManifest.xml  CMakeLists.txt  LICENSE  NOTICE.md  README.md  build.gradle  gradlew
lib/openxr_meta/OpenXR/Include/openxr/: fb_spatial_entity_query.h
src/: main.cpp
src/items/: item.h
src/items/inputs/: action_pose.cpp  action_pose.h  inputs.cpp  inputs.h
src/util/: util_file.cpp  util_file.h
src/xr/: xrp.cpp  xrp.h
